--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -116,6 +116,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: html
+          path: docs/build/html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
