--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -110,6 +110,9 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write    # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
