--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -113,6 +113,8 @@ jobs:
     permissions:
       pages: write    # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
+    needs:
+      - build-docs
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
