--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -96,7 +96,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: .venv/
-          key: ${{ runner.os }}-python-3.11-poetry-${{ hashFiles('poetry.lock') }}
+          key: ${{ runner.os }}-python-3.11-poetry-${{ hashFiles('pyproject.toml') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
