CI: Set package version before publishing to PyPI

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -81,6 +81,7 @@ jobs:
           # Publish to PyPI
           ########################################
           poetry config http-basic.pypi ${{ secrets.PYPI_USERNAME}} ${{ secrets.PYPI_PASSWORD }}
+          poetry version ${{ env.NEW_VERSION }}
           poetry publish --build
 
   build-docs:
