--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ jupyter = "*"
 black = "^22.3.0"
 pylint = "^2.14.3"
 isort = "^5.10.1"
+sphinx-copybutton = "^0.5.2"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
