chore: Require new `numba` version if `umap-learn` is installed. (#88)
An old version of numba is otherwise installed when edvart is installed
with extras `umap`, which installs an old version of `llvmlite` (0.34),
which requires an old version of LLVM binaries, which are often not
available on the target system.

Resolves #86

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,15 @@ colorlover = "*"
 scikit-learn = ">=0.22.1"
 nbconvert = "^7.0.0"    # Required for exporting to HTML
 umap-learn = { version = "^0.5.0", optional = true}
+# umap-learn dependes on numba. It is specified explicitly to install
+# a newer version, since by default it installs an older version of numba,
+# which also installs an older version of llmvlite, which is incompatible
+# with newer version of LLVM binaries.
+numba = { version = "^0.57", optional = true }
 
 [tool.poetry.extras]
-umap = ["umap-learn"]
-all = ["umap-learn"]
+umap = ["umap-learn", "numba"]
+all = ["umap-learn", "numba"]
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.8"
