--- a/.pylintrc
+++ b/.pylintrc
@@ -35,3 +35,6 @@ max-attributes=10
 
 # Maximum number of locals for function / method body.
 max-locals=20
+
+# Maximum number of branches for function / method body.
+max-branches=15
