--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ exclude = ["tests"]
 [tool.poetry.dependencies]
 python = ">=3.8, <3.12"
 ipykernel = "*"
-pandas = "^1.5"
+pandas = ">=1.5, <2.1"
 numpy = "*"
 matplotlib = "*"
 seaborn = "^0.12"
@@ -28,10 +28,12 @@ umap-learn = { version = "^0.5.4", optional = true}
 # which also installs an older version of llmvlite, which is incompatible
 # with newer version of LLVM binaries.
 numba = { version = "^0.57", optional = true }
+pyarrow = { version = "^13.0.0", optional = true }
 
 [tool.poetry.extras]
 umap = ["umap-learn", "numba"]
-all = ["umap-learn", "numba"]
+arrow = ["pyarrow"]
+all = ["umap-learn", "numba", "arrow"]
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.8"
