--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ seaborn = "^0.12"
 plotly = ">=4.0.0, <6"
 statsmodels = ">0.10.2"
 nbformat = "*"
-ipywidgets = "^7.5"
+ipywidgets = ">=7.5, <9"
 colorlover = "*"
 scikit-learn = ">=0.22.1"
 nbconvert = "^7.0.0"    # Required for exporting to HTML
