--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pyarrow = { version = "^13.0.0", optional = true }
 [tool.poetry.extras]
 umap = ["umap-learn", "numba"]
 arrow = ["pyarrow"]
-all = ["umap-learn", "numba", "arrow"]
+all = ["umap-learn", "numba", "pyarrow"]
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.8"
