--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ jupyter = "*"
 black = "^22.3.0"
 pylint = "^2.14.3"
 sphinx-copybutton = "^0.5.2"
+pytest-xdist = "^3.3.1"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
