--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ python = ">=3.8, <3.12"
 ipykernel = "*"
 pandas = ">=1.5, <2.1"
 numpy = "*"
-matplotlib = "*"
+matplotlib = "^3.3"
 seaborn = "^0.12"
 plotly = ">=4.0.0, <6"
 statsmodels = ">0.10.2"
