--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ umap-learn = { version = "^0.5.4", optional = true}
 numba = { version = "^0.57", optional = true }
 pyarrow = { version = "^14.0.1", optional = true }
 isort = "^5.10.1"
+strenum = { version = "^0.4.15", python = "<3.11" }
 
 [tool.poetry.extras]
 umap = ["umap-learn", "numba"]
