refactor: use ruff
ruff replaces `black`, `isort` & `pylint` for formatting & linting.
Note that `isort` is still used to sort imports when exporting to notebook since ruff
does not provide a Python API.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,9 +45,8 @@ jobs:
           poetry run python -m pytest -n auto --disable-warnings --cov=edvart tests/
       - name: Lint
         run: |
-          poetry run pylint --rcfile=.pylintrc edvart/
-          poetry run black --check --line-length 100 edvart/ tests/
-          poetry run isort --check --line-length 100 --profile black edvart/ tests/
+          poetry run ruff check .
+          poetry run ruff format --check .
 
   dismiss-stale-reviews:
     runs-on: ubuntu-22.04
