--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,6 +48,7 @@ jobs:
           poetry run pylint --rcfile=.pylintrc edvart/
           poetry run black --check --line-length 100 edvart/ tests/
           poetry run isort --check --line-length 100 --profile black edvart/ tests/
+          poetry run mypy edvart/
 
   dismiss-stale-reviews:
     runs-on: ubuntu-22.04
