--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,11 +49,30 @@ sphinx = "~7.1"
 sphinx-rtd-theme = "~1.3.0"
 toml = "^0.10.0"
 jupyter = "*"
-black = "^22.3.0"
-pylint = "~3.1"
 sphinx-copybutton = "^0.5.2"
 pytest-xdist = "^3.3.1"
+ruff = "^0.3.0"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 100
+target-version = "py310"
+src = ["task"]
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "F",
+    "N",
+    "W",
+    "I001",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402", "F401"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["edvart"]
