refactor: use mypy type checking (#218)
* add proper type hints
* add mypy type checking to CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,6 +45,7 @@ jobs:
           poetry run python -m pytest -n auto --disable-warnings --cov=edvart tests/
       - name: Lint
         run: |
+          poetry run mypy edvart/
           poetry run ruff check .
           poetry run ruff format --check .
 
