fix: scipy dependency conflict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ numpy = [
     { version = "*", python = "<3.12" },
     { version = "^1.26.0", python = ">=3.12" },
 ]
-scipy = { version = "^1.11", python = ">=3.12" }
+scipy = [
+    { version = ">=1.8,<1.17", python = "<3.12" },
+    { version = "^1.11", python = ">=3.12" },
+]
 matplotlib = "^3.3"
 seaborn = "^0.13"
 plotly = ">=4.0.0, <6"
