--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ jupyter = "*"
 sphinx-copybutton = "^0.5.2"
 pytest-xdist = "^3.3.1"
 pandas-stubs = "^2.2.0"
-mypy = "^1.8.0"
+mypy = "~1.8.0"
 ruff = "^0.3.0"
 
 [build-system]
